--- a/public/home.html
+++ b/public/home.html
@@ -42,7 +42,7 @@
       <div class="container">
         <p>
           <a href="/api/friends">API Friends List</a> |
-          <a href="#">GitHub Repo</a>
+          <a href="https://github.com/StetsonRamey/FriendFinder">GitHub Repo</a>
         </p>
       </div>
     </footer>
